--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<h3>{{title}}</h3>
+<app-nav></app-nav>
+<div>
+  <router-outlet></router-outlet>
+</div>
 
-<ul>
-  <li *ngFor="let user of users">{{user.id}}</li>
-</ul>
