--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -9,8 +9,8 @@
 
 
 
-          
-          
+
+
 
           <div class="col-1">
             <h1 class="navbar-brand" routerLink="/">Navbar</h1>
@@ -23,16 +23,20 @@
                 <li class="nav-item">
                   <a class="nav-link" routerLink="/">Home</a>
                 </li>
-    
-    
+
+
                 <li class="nav-item ">
                   <a class="nav-link" routerLink="/members">Lists</a>
                 </li>
-    
+
                 <li class="nav-item ">
                   <a class="nav-link" routerLink="/messages">Messages</a>
                 </li>
               </ng-container>
+
+              <li class="nav-item ">
+                <a class="nav-link" routerLink="/errors">Errors</a>
+              </li>
 
             </ul>
           </div>
