End of section 10, entering section 11. Uploading images what what.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,9 @@
+
+<ngx-spinner type="line-scale-party">
+
+  Loading, please wait ...
+
+</ngx-spinner>
 <app-nav></app-nav>
 <div>
   <router-outlet></router-outlet>
