--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -1,12 +1,24 @@
-<h3>{{title}}</h3>
+
+
+<!--<ng-container *ngIf="!accountService.isLoggedIn">-->
+
+<!--  <h3>{{title}}</h3>-->
+<!--  <div class="container">-->
+<!--    <div class="row">-->
+<!--      <div class="col-6"></div>-->
+<!--      <div class="col-6">-->
+<!--        <app-register></app-register>-->
+<!--      </div>-->
+<!--    </div>-->
+<!--    <ul>-->
+<!--      <li *ngFor="let user of users">{{user.id}}</li>-->
+<!--    </ul>-->
+<!--  </div>-->
+<!--</ng-container>-->
+<!--<ng-container *ngIf="accountService.isLoggedIn()">-->
 <div class="container">
-  <div class="row">
-    <div class="col-6"></div>
-    <div class="col-6">
-      <app-register></app-register>
-    </div>
-  </div>
-  <ul>
-    <li *ngFor="let user of users">{{user.id}}</li>
-  </ul>
+  <router-outlet></router-outlet>
 </div>
+<!--</ng-container>-->
+
+
