--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -45,7 +45,7 @@
       </div>
 
 
-      <div class="col-4 align-self-end">
+      <div *ngIf="!(accountService.isLoggedIn())" class="col-4 align-self-end">
         <form (ngSubmit)="doLogin()" #loginForm="ngForm" class="row">
 
           <div class="col-5">
@@ -59,7 +59,7 @@
           <div class="col-5">
             <input
               name="username"
-              [(ngModel)]="formData.username"
+              [(ngModel)]="formData.password"
               required
               class="form-control mr-sm-2" type="password" placeholder="Password" aria-label="Password">
           </div>
@@ -71,6 +71,26 @@
         </form>
 
       </div>
+
+      <div *ngIf="(accountService.isLoggedIn())" class="col-2 align-self-end">
+        <div class="btn-group" dropdown>
+          <button id="button-basic" dropdownToggle type="button" class="btn btn-outline-primary dropdown-toggle"
+                  aria-controls="dropdown-basic">
+            Welcome {{currentUserName}}
+             <span class="caret"></span>
+          </button>
+          <ul id="dropdown-basic" *dropdownMenu class="dropdown-menu"
+              role="menu" aria-labelledby="button-basic">
+            <li routerLink="/member/edit" role="menuitem"><a class="dropdown-item">Edit Profile</a></li>
+            <li class="divider dropdown-divider"></li>
+            <li (click)="doLogout()" role="menuitem"><a class="dropdown-item" href="#">Logout</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+
+
+
     </div>
   </div>
 </nav>
