--- a/src/app/errors/server-error/server-error.component.html
+++ b/src/app/errors/server-error/server-error.component.html
@@ -14,14 +14,11 @@
 </ol>
 
 <p style="font-weight: bold;">Here is the stack trace - First few lines</p>
-<code class="mt-5" style="background-color: whitesmoke;">
-{{error.details}}
+<code class="mt-5 mb-5" style="background-color: whitesmoke;">
+{{error.Details}}
 </code>
-
-
-    <div class="container">
+    <div class="container mt-5">
         <button routerLink="/" class="btn btn-outline-info">Home</button>
     </div>
-
 </ng-container>
 </div>
