--- a/src/app/home/member.details/member.details.component.html
+++ b/src/app/home/member.details/member.details.component.html
@@ -1,1 +1,60 @@
-<p>member.details works!</p>
+<div class="container mt-5" *ngIf="member">
+  <div class="row">
+  <div class="col-4">
+    <div class="card">
+      <img src="{{member.photoUrl || './assets/user.png' }}" alt="{{member.knownAs}}"
+           class="card-img-top img-thumbnail">
+      <div class="card-body">
+        <div>
+          <strong>Location: </strong>
+          <p>{{member.city}}</p>
+        </div>
+
+        <div>
+          <strong>Last Active: </strong>
+          <p>{{member.lastActive}}</p>
+        </div>
+
+        <div>
+          <strong>Member Since: </strong>
+          <p>{{member.created}}</p>
+        </div>
+
+
+      </div>
+
+      <div class="card-footer">
+        <div class="btn-group d-flex">
+          <button class="btn btn-primary">Like</button>
+          <button class="btn btn-danger">Message</button>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+  <div class="col-8">
+    <tabset>
+      <tab heading="About {{member.knownAs}}">
+        <h4>About {{member.knownAs}}</h4>
+        <p>{{member.introduction}}</p>
+
+        <h4>Looking for</h4>
+        <p>{{member.lookingFor}}</p>
+      </tab>
+
+      <tab heading="Interests">
+        {{member.intrests}}
+      </tab>
+
+      <tab heading="Photos">
+<!--        <gallery [items]="images" ></gallery>-->
+      </tab>
+
+      <tab heading="Messages">
+        Some messages and the chat app will be here.
+      </tab>
+    </tabset>
+  </div>
+</div>
+</div>
