--- a/src/app/home/members/member-edit/member-edit.component.html
+++ b/src/app/home/members/member-edit/member-edit.component.html
@@ -77,7 +77,7 @@
         </tab>
 
         <tab heading="Photos">
-          <!--        <gallery [items]="images" ></gallery>-->
+          <app-upload-photo [member]="member"></app-upload-photo>
         </tab>
 
         <tab heading="Messages">
