--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,48 +1,48 @@
 <div class="form-group">
-  <form (ngSubmit)="doRegister()" #regForm="ngForm">
+    <form (ngSubmit)="doRegister()" [formGroup]="registerForm">
 
-    <div class="form-group">
-      <label>Username</label>
-      <input type="text"
-             placeholder="Username"
-             name="username"
-             required
-             [(ngModel)]="formData.username"
-             class="form-control col">
-    </div>
+        <div class="form-group">
+            <label>Username</label>
+            <input type="text"
+                   placeholder="Username"
+                   required
+                   formControlName="username"
+                   class="form-control col">
+        </div>
 
-    <div class="form-group">
-      <label>Phone</label>
-      <input type="text"
-             placeholder="Phone"
-             name="phone"
-             required
-             [(ngModel)]="formData.phone"
-             class="form-control col">
-    </div>
+        <div class="form-group">
+            <label>Phone</label>
+            <input type="text"
+                   placeholder="Phone"
+                   required
+                   formControlName="phone"
+                   class="form-control col">
+        </div>
 
-    <div class="form-group">
-      <label>Phone</label>
-      <input type="email"
-             required
-             placeholder="Email Address"
-             name="email"
-             [(ngModel)]="formData.email"
-             class="form-control col">
-    </div>
+        <div class="form-group">
+            <label>Phone</label>
+            <input type="email"
+                   formControlName="email"
+                   class="form-control col">
+        </div>
 
-    <div class="form-group">
-      <label>Password</label>
-      <input type="password"
-             placeholder="Password"
-             name="phone"
-             required
-             [(ngModel)]="formData.password"
-             class="form-control col">
-    </div>
+        <div class="form-group">
+            <label>Password</label>
+            <input type="password"
+                   placeholder="Password"
+                   formControlName="password"
+                   class="form-control col">
+        </div>
+        <div class="form-group">
+            <label>Password</label>
+            <input type="password"
+                   placeholder="Confirm Password"
+                   formControlName="confirmPassword"
+                   class="form-control col">
+        </div>
 
-    <div class="col mt-2">
-      <button class="btn btn-primary col-12">Register</button>
-    </div>
-  </form>
+        <div class="col mt-2">
+            <button class="btn btn-primary col-12">Register</button>
+        </div>
+    </form>
 </div>
