--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -3,42 +3,82 @@
 
         <div class="form-group">
             <label>Username</label>
-            <input type="text"
-                   placeholder="Username"
-                   required
-                   formControlName="username"
-                   class="form-control col">
+            <input
+                    [class.is-invalid]="registerForm.get('username')?.errors && registerForm.get('username')?.touched"
+                    type="text"
+                    placeholder="Username"
+
+                    formControlName="username"
+                    class="form-control col">
+            <div class="invalid-feedback">
+                Please enter a username.
+            </div>
         </div>
 
         <div class="form-group">
             <label>Phone</label>
             <input type="text"
                    placeholder="Phone"
-                   required
+                   [class.is-invalid]="registerForm.get('phone')?.errors
+                   && registerForm.get('phone')?.touched"
                    formControlName="phone"
                    class="form-control col">
+            <div class="invalid-feedback">
+                Please enter a email address.
+            </div>
         </div>
 
         <div class="form-group">
             <label>Phone</label>
             <input type="email"
+                   [class.is-invalid]="registerForm.get('email')?.errors
+                   && registerForm.get('email')?.touched"
                    formControlName="email"
                    class="form-control col">
+            <div class="invalid-feedback">
+                Please enter a phone number.
+            </div>
         </div>
 
         <div class="form-group">
             <label>Password</label>
             <input type="password"
+                   [class.is-invalid]="registerForm.get('password')?.errors
+                   && registerForm.get('password')?.touched"
                    placeholder="Password"
                    formControlName="password"
                    class="form-control col">
+            <div class="invalid-feedback" *ngIf="registerForm.get('password')?.hasError('required')">
+                Please enter a password.
+            </div>
+            <div class="invalid-feedback" *ngIf="registerForm.get('password')?.hasError('minlength')">
+                Please enter a password longer than 4 characters.
+            </div>
+            <div class="invalid-feedback" *ngIf="registerForm.get('password')?.hasError('maxlength')">
+                Please enter a password shorter than 8 characters.
+            </div>
         </div>
+
         <div class="form-group">
             <label>Password</label>
             <input type="password"
+                   [class.is-invalid]="registerForm.get('confirmPassword')?.errors
+                   && registerForm.get('confirmPassword')?.touched"
                    placeholder="Confirm Password"
                    formControlName="confirmPassword"
                    class="form-control col">
+            <div class="invalid-feedback" *ngIf="registerForm.get('confirmPassword')?.hasError('required')">
+                Please confirm your password.
+            </div>
+            <div class="invalid-feedback" *ngIf="registerForm.get('confirmPassword')?.hasError('notMatch')">
+                Your passwords are not matching.
+            </div>
+            <div class="invalid-feedback" *ngIf="registerForm.get('confirmPassword')?.hasError('minlength')">
+                Please enter a confirmation password longer than 4 characters.
+            </div>
+            <div class="invalid-feedback" *ngIf="registerForm.get('confirmPassword')?.hasError('maxlength')">
+                Please enter a confirmation password shorter than 8 characters.
+            </div>
         </div>
 
         <div class="col mt-2">
