--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,88 +1,85 @@
 <div class="form-group">
-    <form (ngSubmit)="doRegister()" [formGroup]="registerForm">
+  <h1 class="text-center mt-3">Sign Up Here</h1>
+  <hr>
+  <form (ngSubmit)="doRegister()" [formGroup]="registerForm">
 
-        <div class="form-group">
-            <label>Username</label>
-            <input
-                    [class.is-invalid]="registerForm.get('username')?.errors && registerForm.get('username')?.touched"
-                    type="text"
-                    placeholder="Username"
+    <div class="mb-3 row">
+      <div class="col-3"></div>
+      <div class="col-2">
+        <label style="margin-right: 10px;">I am a : </label>
+      </div>
+      <div class="col-2">
+        <label class="form-check">
+          <input
+            type="radio"
+            class="form-check-input"
+            formControlName="gender"
+            value="Male"> Male
+        </label>
+      </div>
+      <div class="col-2">
+        <label class="form-check">
+          <input
+            type="radio"
+            class="form-check-input"
+            formControlName="gender"
+            value="Female"> Female
+        </label>
+      </div>
+      <div class="col-3"></div>
 
-                    formControlName="username"
-                    class="form-control col">
-            <div class="invalid-feedback">
-                Please enter a username.
-            </div>
-        </div>
 
-        <div class="form-group">
-            <label>Phone</label>
-            <input type="text"
-                   placeholder="Phone"
-                   [class.is-invalid]="registerForm.get('phone')?.errors
-                   && registerForm.get('phone')?.touched"
-                   formControlName="phone"
-                   class="form-control col">
-            <div class="invalid-feedback">
-                Please enter a email address.
-            </div>
-        </div>
+    </div>
 
-        <div class="form-group">
-            <label>Phone</label>
-            <input type="email"
-                   [class.is-invalid]="registerForm.get('email')?.errors
-                   && registerForm.get('email')?.touched"
-                   formControlName="email"
-                   class="form-control col">
-            <div class="invalid-feedback">
-                Please enter a phone number.
-            </div>
-        </div>
+    <app-text-input
+      [label]="'Username'"
+      [type]="'text'"
+      [name]="'Username'"
+      [formControl]="$any(registerForm.controls['username'])"></app-text-input>
 
-        <div class="form-group">
-            <label>Password</label>
-            <input type="password"
-                   [class.is-invalid]="registerForm.get('password')?.errors
-                   && registerForm.get('password')?.touched"
-                   placeholder="Password"
-                   formControlName="password"
-                   class="form-control col">
-            <div class="invalid-feedback" *ngIf="registerForm.get('password')?.hasError('required')">
-                Please enter a password.
-            </div>
-            <div class="invalid-feedback" *ngIf="registerForm.get('password')?.hasError('minlength')">
-                Please enter a password longer than 4 characters.
-            </div>
-            <div class="invalid-feedback" *ngIf="registerForm.get('password')?.hasError('maxlength')">
-                Please enter a password shorter than 8 characters.
-            </div>
-        </div>
+    <app-text-input
+      [label]="'known as'"
+      [type]="'text'"
+      [name]="'knownAs'"
+      [formControl]="$any(registerForm.controls['knownAs'])"></app-text-input>
 
-        <div class="form-group">
-            <label>Password</label>
-            <input type="password"
-                   [class.is-invalid]="registerForm.get('confirmPassword')?.errors
-                   && registerForm.get('confirmPassword')?.touched"
-                   placeholder="Confirm Password"
-                   formControlName="confirmPassword"
-                   class="form-control col">
-            <div class="invalid-feedback" *ngIf="registerForm.get('confirmPassword')?.hasError('required')">
-                Please confirm your password.
-            </div>
-            <div class="invalid-feedback" *ngIf="registerForm.get('confirmPassword')?.hasError('notMatch')">
-                Your passwords are not matching.
-            </div>
-            <div class="invalid-feedback" *ngIf="registerForm.get('confirmPassword')?.hasError('minlength')">
-                Please enter a confirmation password longer than 4 characters.
-            </div>
-            <div class="invalid-feedback" *ngIf="registerForm.get('confirmPassword')?.hasError('maxlength')">
-                Please enter a confirmation password shorter than 8 characters.
-            </div>
-        </div>
+    <app-date-picker
+      [label]="'date of birth'"
+      [formControl]="$any(registerForm.controls['dateOfBirth'])"></app-date-picker>
 
-        <div class="col mt-2">
-            <button class="btn btn-primary col-12">Register</button>
-        </div>
-    </form>
+    <app-text-input
+      [label]="'city'"
+      [type]="'text'"
+      [formControl]="$any(registerForm.controls['city'])"></app-text-input>
+
+   <app-text-input
+      [label]="'country'"
+      [type]="'text'"
+      [formControl]="$any(registerForm.controls['country'])"></app-text-input>
+
+    <app-text-input
+      [label]="'Phone number'"
+      [type]="'tel'"
+      [formControl]="$any(registerForm.controls['phone'])"></app-text-input>
+
+    <app-text-input
+      [label]="'Email Address'"
+      [type]="'email'"
+      [formControl]="$any(registerForm.controls['email'])"></app-text-input>
+
+    <app-text-input
+      [label]="'Password'"
+      [type]="'password'"
+      [formControl]="$any(registerForm.controls['password'])"></app-text-input>
+
+    <app-text-input
+      [label]="'Confirm Password'"
+      [type]="'password'"
+      [formControl]="$any(registerForm.controls['confirmPassword'])"></app-text-input>
+
+
+    <div class="col mt-2">
+      <button class="btn btn-primary col-12">Register</button>
+    </div>
+  </form>
 </div>
