--- a/src/app/components/text-input/text-input.component.html
+++ b/src/app/components/text-input/text-input.component.html
@@ -1,20 +1,29 @@
-<div class="form-group">
-    <label>Password</label>
-    <input type="password"
-           [class.is-invalid]="control.invalid && control.touched"
-           placeholder="{{label}}"
-           [formControl]="control"
-           class="form-control col">
-    <div class="invalid-feedback" *ngIf="control.errors?.['required']">
-        Please enter a {{label}}.
-    </div>
-    <div class="invalid-feedback" *ngIf="registerForm.get('confirmPassword')?.hasError('notMatch')">
-        Your passwords are not matching.
-    </div>
-    <div class="invalid-feedback" *ngIf="registerForm.get('confirmPassword')?.hasError('minlength')">
-        Please enter a confirmation password longer than 4 characters.
-    </div>
-    <div class="invalid-feedback" *ngIf="registerForm.get('confirmPassword')?.hasError('maxlength')">
-        Please enter a confirmation password shorter than 8 characters.
-    </div>
+<div class="form-group mt-2 mb-2">
+  <label>{{label}}</label>
+  <input [class.is-invalid]="control.invalid && control.touched"
+         placeholder="{{label}}"
+         [type]="type"
+         [formControl]="control"
+         name="name"
+         class="form-control col">
+  <div class="invalid-feedback" *ngIf="control.errors?.['required']">
+    Please enter your {{label}}.
+  </div>
+
+  <div class="invalid-feedback" *ngIf="control.errors?.['email']">
+    Invalid email address.
+  </div>
+
+  <div class="invalid-feedback" *ngIf="control.errors?.['minlength']">
+    {{label}} must be at least {{control.errors?.['minlength'].requiredLength}} characters long.
+  </div>
+
+  <div class="invalid-feedback" *ngIf="control.errors?.['maxlength']">
+    {{label}} must be at most {{control.errors?.['maxlength'].requiredLength}} characters long.
+  </div>
+
+  <div class="invalid-feedback" *ngIf="control.errors?.['notMatching']">
+    Your passwords do not match.
+  </div>
+
 </div>
