--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -8,7 +8,7 @@
         <div class="row">
 
           <div class="col-1">
-            <h1 class="navbar-brand" routerLink="/">Navbar</h1>
+            <h1 class="navbar-brand" routerLink="/">Dating App</h1>
           </div>
 
           <div class="col-11">
@@ -75,7 +75,7 @@
                   type="button"
                   class="btn btn-outline-primary dropdown-toggle"
                   aria-controls="dropdown-basic">
-            Welcome {{currentUserName}}
+            Welcome {{currentUserName| titlecase}}
              <span class="caret"></span>
           </button>
           <ul id="dropdown-basic" *dropdownMenu class="dropdown-menu"
