--- a/src/app/home/members/members.component.html
+++ b/src/app/home/members/members.component.html
@@ -1,3 +1,58 @@
+<div class="text-center mt-3">
+  <h2>Your matches - {{pagination?.totalItems}} found</h2>
+</div>
+
+<div *ngIf="userParams" class="container mt-3">
+  <form #form="ngForm"
+        (ngSubmit)="loadMembers()"
+        autocomplete="off"
+        class="d-flex mb-3">
+
+    <div class="d-flex mx-2">
+      <label class="col-form-label mx-2">Age From</label>
+      <input type="number"
+             name="minAge"
+             placeholder="Min age"
+             [(ngModel)]="userParams.minAge"
+             class="form-control">
+
+    </div>
+    <div class="d-flex mx-2">
+
+      <label class="col-form-label mx-2">Age To</label>
+      <input type="number"
+             name="maxAge"
+             placeholder="Max age"
+             [(ngModel)]="userParams.maxAge"
+             class="form-control">
+
+    </div>
+
+    <div class="d-flex mx-2">
+      <label class="col-form-label mx-2">Show :</label>
+     <select class="form-control form-select"
+             name="gender"
+             [(ngModel)]="userParams.gender">
+       <option
+         class="form-control"
+         *ngFor="let g of genderList"
+         [value]="g.value"  >{{g.display}}</option>
+     </select>
+
+    </div>
+
+    <button class="btn btn-primary mx-2"
+            type="submit"
+            (click)="loadMembers()">Apply Filters</button>
+    <button class="btn btn-danger"
+            type="reset"
+            (click)="resetFilters()" >Reset Filters</button>
+
+
+  </form>
+</div>
+
+
 <div class="row">
   <div *ngFor="let member of members" class="col-2">
     <app-member-list-card [member]="member"></app-member-list-card>
