--- a/src/app/home/members/member-list-card/member-list-card.component.html
+++ b/src/app/home/members/member-list-card/member-list-card.component.html
@@ -10,7 +10,7 @@
       </li>
 
       <li class="animate list-inline-item">
-        <button class="btn btn-primary">
+        <button (click)="addLike(member!)" class="btn btn-primary">
           <i class="fa fa-heart"></i>
         </button>
       </li>
