--- a/src/app/home/messages/messages.component.html
+++ b/src/app/home/messages/messages.component.html
@@ -1,1 +1,44 @@
-<p>messages works!</p>
+  <div class="mb-4 mt-3 d-flex">
+    <div class="btn-group" name="container">
+      <button
+        [btnRadio]="'Unread'"
+        [(ngModel)]="container"
+        (click)="loadMessages()"
+        class="btn btn-primary" >
+        <i class="fa fa-envelope"></i> Unread
+      </button>
+
+      <button
+        [btnRadio]="'Unread'"
+        [(ngModel)]="container"
+        (click)="loadMessages()"
+        class="btn btn-primary" >
+        <i class="fa fa-envelope-open"></i> Inbox
+      </button>
+
+      <button
+        [btnRadio]="'Unread'"
+        [(ngModel)]="container"
+        (click)="loadMessages()"
+        class="btn btn-primary" >
+        <i class="fa fa-paper-plane"></i> Outbox
+      </button>
+
+    </div>
+  </div>
+
+  <div class="row" *ngIf="!messages">
+    <h3>  No Messages</h3>
+  </div>
+
+  <div class="row" *ngIf="messages">
+   <table style="cursor: pointer;" class="table table-hover">
+     <thead>
+     <tr>
+       <th style="width: 40%"></th>
+     </tr>
+     </thead>
+   </table>
+  </div>
+
+
