--- a/src/app/home/member.details/member.details.component.html
+++ b/src/app/home/member.details/member.details.component.html
@@ -1,60 +1,63 @@
 <div class="container mt-5" *ngIf="member">
   <div class="row">
-  <div class="col-4">
-    <div class="card">
-      <img src="{{member.photoUrl || './assets/user.png' }}" alt="{{member.knownAs}}"
-           class="card-img-top img-thumbnail">
-      <div class="card-body">
-        <div>
-          <strong>Location: </strong>
-          <p>{{member.city}}</p>
+    <div class="col-4">
+      <div class="card">
+        <img src="{{member.photoUrl || './assets/user.png' }}" alt="{{member.knownAs}}"
+             class="card-img-top img-thumbnail">
+        <div class="card-body">
+          <div>
+            <strong>Location: </strong>
+            <p>{{member.city}}</p>
+          </div>
+
+          <div>
+            <strong>Last Active: </strong>
+            <p>{{member.lastActive}}</p>
+          </div>
+
+          <div>
+            <strong>Member Since: </strong>
+            <p>{{member.created}}</p>
+          </div>
+
+
         </div>
 
-        <div>
-          <strong>Last Active: </strong>
-          <p>{{member.lastActive}}</p>
+        <div class="card-footer">
+          <div class="btn-group d-flex">
+            <button class="btn btn-primary">Like</button>
+            <button class="btn btn-danger">Message</button>
+          </div>
         </div>
-
-        <div>
-          <strong>Member Since: </strong>
-          <p>{{member.created}}</p>
-        </div>
-
-
       </div>
 
-      <div class="card-footer">
-        <div class="btn-group d-flex">
-          <button class="btn btn-primary">Like</button>
-          <button class="btn btn-danger">Message</button>
-        </div>
-      </div>
     </div>
 
+    <div class="col-8">
+      <tabset #memberTabs>
+        <tab (selectTab)="onActivationTab($event)" heading="About {{member.knownAs}}">
+          <h4>About {{member.knownAs}}</h4>
+          <p>{{member.introduction}}</p>
+
+          <h4>Looking for</h4>
+          <p>{{member.lookingFor}}</p>
+        </tab>
+
+        <tab (selectTab)="onActivationTab($event)" heading="Interests">
+          {{member.intrests}}
+        </tab>
+
+        <tab (selectTab)="onActivationTab($event)" heading="Photos">
+          <!--
+           //todo please come back here with a suitable gallery library.
+           <gallery [items]="images" ></gallery>-->
+        </tab>
+
+        <tab (selectTab)="onActivationTab($event)" heading="Messages">
+          <app-chat [messages]="messages"
+                    [username]="member.userName"></app-chat>
+        </tab>
+      </tabset>
+    </div>
   </div>
-
-  <div class="col-8">
-    <tabset>
-      <tab heading="About {{member.knownAs}}">
-        <h4>About {{member.knownAs}}</h4>
-        <p>{{member.introduction}}</p>
-
-        <h4>Looking for</h4>
-        <p>{{member.lookingFor}}</p>
-      </tab>
-
-      <tab heading="Interests">
-        {{member.intrests}}
-      </tab>
-
-      <tab heading="Photos">
-<!--        <gallery [items]="images" ></gallery>-->
-      </tab>
-
-      <tab heading="Messages">
-        Some messages and the chat app will be here.
-      </tab>
-    </tabset>
-  </div>
-</div>
 </div>
